fixed pre-wrap on blockquote

--- a/css/_display.css
+++ b/css/_display.css
@@ -20,6 +20,10 @@ blockquote {
 	border-left: 8px solid var(--black10);
 }
 
+code {
+    white-space: pre-wrap;
+}
+
 .highlight {
     padding: 2em;
 }
